--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <header class="header">
 
-        <h3> Tribute page</h3>
+        <h3> Tribute To All Mothers!</h3>
 
         <nav class="navbar">
             <a href="#Introduction">Introduction</a>
